@@ -6,6 +6,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- use reworked dirlist API
 	- updated TiLP to follow the slightly modified FLASH app dirlist format
 	- fixed 'bug' #1499672: sorting by name is case insensitive on Windows for now.
+	- fixed bug #1499672: sorting by type didn't work properly on the pc-panel
 
 - 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
 	- fixed USB device reconnection
